--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,5 @@ edition = "2021"
 rand = { version = "0.8.5", features = [ "small_rng" ] }
 rand_distr = "0.4.0"
 phf = { version = "0.10", features = ["macros"] }
+regex = "1"
+ndarray = "0.15"
