Parser seems to be working

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,12 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[profile.bench]
+debug = true
+
 [dependencies]
 rand = { version = "0.8.5", features = [ "small_rng" ] }
 rand_distr = "0.4.0"
 phf = { version = "0.10", features = ["macros"] }
-regex = "1"
+regex = "1.9"
 ndarray = "0.15"
