--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ rand_distr = "0.4.0"
 phf = { version = "0.10", features = ["macros"] }
 regex = "1.9"
 ndarray = "0.15"
+csv = "1.1"
+enum_dispatch = "0.3"
