--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[lib]
+name = "ihor"
+crate-type = ["cdylib"]
 
+[profile.release]
+debug = true
 [profile.bench]
 debug = true
 
@@ -16,3 +21,6 @@ regex = "1.9"
 ndarray = "0.15"
 csv = "1.1"
 enum_dispatch = "0.3"
+pyo3 = {version = "0.20.0", features = ["extension-module"]}
+ndarray-linalg = {version = "0.14", features = ["openblas"]}
+duplicate = {version = "1.0.0"}
