finished the alignment (not tested)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ debug = true
 [profile.bench]
 debug = true
 
+
 [dependencies]
 rand = { version = "0.8.5", features = [ "small_rng" ] }
 rand_distr = "0.4.0"
@@ -25,3 +26,5 @@ pyo3 = {version = "0.20.0", features = ["extension-module"]}
 ndarray-linalg = {version = "0.14", features = ["openblas"]}
 duplicate = {version = "1.0.0"}
 bio = "1.5"
+indicatif = "0.17.7"
+approx_eq = "0.1.8"
