--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,9 +22,12 @@ regex = "1.9"
 ndarray = "0.15"
 csv = "1.1"
 enum_dispatch = "0.3"
-pyo3 = {version = "0.20.0", features = ["extension-module"]}
+pyo3 = {version = "0.20.0", features = ["extension-module", "anyhow"]}
 ndarray-linalg = {version = "0.14", features = ["openblas"]}
 duplicate = {version = "1.0.0"}
 bio = "1.5"
 indicatif = "0.17.7"
 approx_eq = "0.1.8"
+itertools = "0.10.0"
+numpy = "0.20"
+anyhow = "1.0.76"
