--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
 name = "ihor"
-crate-type = ["cdylib"]
+path = "src/lib.rs"
+# crate-type = ["cdylib"]
 
 [profile.release]
 debug = true
