--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 [lib]
 name = "ihor"
 path = "src/lib.rs"
-# crate-type = ["cdylib"]
+crate-type = ["cdylib"]
 
 [profile.release]
 debug = true
