--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,12 +24,19 @@ regex = "1.9"
 ndarray = "0.15"
 csv = "1.1"
 enum_dispatch = "0.3"
-pyo3 = {version = "0.20.0", features = ["extension-module", "anyhow"]}
-ndarray-linalg = {version = "0.14", features = ["openblas"]}
+pyo3 = {version = "0.20.0", features = ["extension-module", "anyhow", "multiple-pymethods"], optional=true}
+# ndarray-linalg = {version = "0.14", features = ["openblas"]}
 duplicate = {version = "1.0.0"}
 bio = "1.5"
-kdam = "0.5.1"
+kdam = {version="0.5.1", optional=true}
 approx_eq = "0.1.8"
 itertools = "0.10.0"
-numpy = "0.20"
+numpy = {version = "0.20", optional=true}
 anyhow = "1.0.76"
+wasm-bindgen = "0.2.88"
+getrandom = { version = "0.2", features = ["js"] }
+
+
+[features]
+default = ["kdam"]
+py_binds = ["numpy", "pyo3"]
