--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ path = "src/lib.rs"
 crate-type = ["cdylib", "lib"]
 
 [profile.release]
-debug = true
+# debug = true
 opt-level = 3
-[profile.bench]
-debug = true
+# [profile.bench]
+# debug = true
 
 
 # [profile.dev]
