--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ crate-type = ["cdylib", "lib"]
 [profile.release]
 # debug = true
 opt-level = 3
+panic = "abort"
+overflow-checks = false
 # [profile.bench]
 # debug = true
 
