Changed the architecture which really improved the speed, there is still a bug with the error rate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,11 @@ path = "src/lib.rs"
 crate-type = ["cdylib", "lib"]
 
 [profile.release]
-# debug = true
+debug = true
 opt-level = 3
-panic = "abort"
-overflow-checks = false
+
+# panic = "abort"
+# overflow-checks = false
 # [profile.bench]
 # debug = true
 
