--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,7 +33,7 @@ numpy = {version = "0.20", optional=true}
 anyhow = "1.0.76"
 wasm-bindgen = "0.2.88"
 getrandom = { version = "0.2", features = ["js"] }
-
+fast-math = "0.1"
 
 [features]
 default = ["kdam"]
