--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ regex = "1.9"
 ndarray = "0.15"
 csv = "1.1"
 enum_dispatch = "0.3"
-pyo3 = {version = "0.20.0", features = ["extension-module", "anyhow", "multiple-pymethods"], optional=true}
+pyo3 = {version = "0.20.0", features = ["extension-module", "anyhow", "multiple-pymethods", "auto-initialize"], optional=true}
 # ndarray-linalg = {version = "0.14", features = ["openblas"]}
 duplicate = {version = "1.0.0"}
 bio = "1.5"
