--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,11 +7,13 @@ edition = "2021"
 [lib]
 name = "ihor"
 path = "src/lib.rs"
-crate-type = ["cdylib", "lib"]
+# crate-type = ["cdylib", "lib"]
 
 [profile.release] # Not a ton of worthwhile optimization honestly
 debug = true
 opt-level = 3
+
+
 
 
 [dependencies]
@@ -19,7 +21,7 @@ rand = { version = "0.8.5", features = [ "small_rng" ] }
 rand_distr = "0.4.0"
 phf = { version = "0.10", features = ["macros"] }
 regex = "1.9"
-ndarray = "0.15"
+ndarray = {version="0.15", features = ["approx"]}
 csv = "1.1"
 enum_dispatch = "0.3"
 pyo3 = {version = "0.20.0", features = ["extension-module", "anyhow", "multiple-pymethods", "auto-initialize"], optional=true}
@@ -35,6 +37,8 @@ wasm-bindgen = "0.2.88"
 getrandom = { version = "0.2", features = ["js"] }
 fast-math = "0.1"
 rayon = "1.8.1"
+serde = { version = "1.0.197", features = ["derive"] }
+serde_json = "1.0.114"
 
 [features]
 default = ["kdam"]
