Changed the name from ihor to righor

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "ihor"
-version = "0.1.0"
+name = "righor"
+version = "0.2.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "ihor"
+name = "righor"
 path = "src/lib.rs"
 # crate-type = ["cdylib", "lib"]
 
