--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,9 @@
 name = "righor"
 version = "0.2.0"
 edition = "2021"
+license = "MIT"
+homepage = "https://github.com/Thopic/righor"
+
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
