--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ fast-math = "0.1"
 rayon = "1.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
+dyn-clone = "1.0.17"
 
 [features]
 default = ["kdam"]
