--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ rayon = "1.8.1"
 serde = { version = "1.0.197", features = ["derive"] }
 serde_json = "1.0.114"
 dyn-clone = "1.0.17"
+memoize = "0.4.2"
 
 [features]
 default = ["kdam"]
