--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,7 +40,7 @@ wasm-bindgen = "0.2.88"
 getrandom = { version = "0.2", features = ["js"] }
 fast-math = "0.1"
 rayon = "1.8.1"
-serde = { version = "1.0.197", features = ["derive"] }
+serde = { version = "1.0.197", features = ["derive", "rc"] }
 serde_json = "1.0.114"
 dyn-clone = "1.0.17"
 memoize = "0.4.2"
