--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,14 +27,15 @@ regex = "1.9"
 ndarray = {version="0.15", features = ["approx", "serde"]}
 csv = "1.1"
 enum_dispatch = "0.3"
-pyo3 = {version = "0.20.3", features = ["extension-module", "anyhow", "multiple-pymethods"], optional=true}
+pyo3 = {version = "0.21", features = ["extension-module", "anyhow", "multiple-pymethods"], optional=true}
+pyo3-pylogger = {version="0.3.0", optional=true}
 # ndarray-linalg = {version = "0.14", features = ["openblas"]}
 duplicate = {version = "1.0.0"}
 bio = "1.5"
 kdam = {version="0.5.1", optional=true}
 approx_eq = "0.1.8"
 itertools = "0.10.0"
-numpy = {version = "0.20", optional=true}
+numpy = {version = "0.21", optional=true}
 anyhow = "1.0.76"
 wasm-bindgen = "0.2.88"
 getrandom = { version = "0.2", features = ["js"] }
@@ -47,7 +48,8 @@ memoize = "0.4.2"
 cfg-if = "1.0"
 nalgebra = {version = "0.32.6"}
 nohash-hasher = "0.2"
+log = { version = "0.4", optional=true}
 
 [features]
 default = ["kdam"]
-py_binds = ["numpy", "pyo3"]
+py_binds = ["numpy", "pyo3", "pyo3-pylogger", "log"]
