--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,4 +51,4 @@ log = { version = "0.4", optional=true}
 
 [features]
 default = ["kdam"]
-py_binds = ["numpy", "pyo3", "pyo3-pylogger", "log"]
+py_binds = ["numpy", "pyo3", "log"]
