--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "righor"
-version = "0.2.6"
+version = "0.2.61"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/Thopic/righor"
@@ -31,7 +31,6 @@ pyo3 = {version = "0.21", features = ["extension-module", "anyhow", "multiple-py
 # ndarray-linalg = {version = "0.14", features = ["openblas"]}
 duplicate = {version = "1.0.0"}
 bio = "1.5"
-kdam = {version="0.5.1", optional=true}
 approx_eq = "0.1.8"
 itertools = "0.10.0"
 numpy = {version = "0.21", optional=true}
@@ -40,6 +39,7 @@ wasm-bindgen = "0.2.88"
 getrandom = { version = "0.2", features = ["js"] }
 fast-math = "0.1"
 rayon = "1.8.1"
+kdam = { version = "0.5.0", features = ["rayon"], optional=true }
 serde = { version = "1.0.197", features = ["derive", "rc"] }
 serde_json = "1.0.114"
 dyn-clone = "1.0.17"
@@ -51,4 +51,4 @@ log = { version = "0.4", optional=true}
 
 [features]
 default = ["kdam"]
-py_binds = ["numpy", "pyo3", "log"]
+py_binds = ["numpy", "pyo3", "log", "kdam/notebook"]
