--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "righor"
-version = "0.2.61"
+version = "0.2.91"
 edition = "2021"
 license = "MIT"
 repository = "https://github.com/Thopic/righor"
@@ -9,14 +9,13 @@ description = "Righor creates model of Ig/TCR sequences from sequencing data."
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
+crate-type = ["rlib", "cdylib"]
 name = "righor"
 path = "src/lib.rs"
 
 [profile.release] # Not a ton of worthwhile optimization honestly
 debug = true
 opt-level = 3
-
-
 
 
 [dependencies]
@@ -27,19 +26,19 @@ regex = "1.9"
 ndarray = {version="0.15", features = ["approx", "serde"]}
 csv = "1.1"
 enum_dispatch = "0.3"
-pyo3 = {version = "0.21", features = ["extension-module", "anyhow", "multiple-pymethods"], optional=true}
+pyo3 = {version = "0.22", features = ["extension-module", "anyhow", "multiple-pymethods"], optional=true}
 # ndarray-linalg = {version = "0.14", features = ["openblas"]}
 duplicate = {version = "1.0.0"}
 bio = "1.5"
 approx_eq = "0.1.8"
 itertools = "0.10.0"
-numpy = {version = "0.21", optional=true}
+numpy = {version = "0.22.0", optional=true}
 anyhow = "1.0.76"
 wasm-bindgen = "0.2.88"
 getrandom = { version = "0.2", features = ["js"] }
 fast-math = "0.1"
 rayon = "1.8.1"
-kdam = { version = "0.5.0", features = ["rayon"], optional=true }
+kdam = { version = "0.6.1", features = ["rayon"], optional=true }
 serde = { version = "1.0.197", features = ["derive", "rc"] }
 serde_json = "1.0.114"
 dyn-clone = "1.0.17"
