--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: [3.9, 3.10, 3.11, 3.12]
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
@@ -68,7 +68,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
         with:
-          python-version: 3.x
+          python-version: [3.9, 3.10, 3.11, 3.12]
       - name: Build wheels
         uses: PyO3/maturin-action@v1
         with:
