--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,6 +47,8 @@ cfg-if = "1.0"
 nalgebra = {version = "0.32.6"}
 nohash-hasher = "0.2"
 log = { version = "0.4", optional=true}
+once_cell = {version = "1.20.3"}
+foldhash = {version = "0.1.4"}
 
 [features]
 default = ["kdam"]
